--- a/project_page/weaponzeroing.html
+++ b/project_page/weaponzeroing.html
@@ -50,18 +50,18 @@
             <div class="row">
                 <div class="col-sm-4">
                     <p class=" link ">
-                        <a href="https://github.com/shahriariqbal079/Warriors_Handbook " target="_blank"> Github
-                            Link</a> <br>
+                        <!-- <a href="https://github.com/shahriariqbal079/Warriors_Handbook " target="_blank"> Github
+                            Link</a> <br> -->
                         <a href=" https://drive.google.com/open?id=1Fb8yZuCEWpFuFW6J4u1qyJCBf9xLHsfn" target="_blank">
                             Demo Video </a> <br>
                         <a href=" https://drive.google.com/open?id=1of4miNjXVxRnoQs9kqHiHtiXteoAbk9i" target="_blank">
                             Project Presentation </a> <br>
-                        <a href=" https://drive.google.com/open?id=1U5jufP3yzymYWSs2Z9GSfwT_e_dL2JiY" target="_blank">
+                        <a href="https://drive.google.com/file/d/1hToe1QhZcjwZcAHww_iDp7CO9eXm8Udc/view?usp=sharing" target="_blank">
                             Project User Manual</a> <br>
-                        <a href=" https://drive.google.com/open?id=1NdUMphphGiX0L_eiPyHZtfcOCldTyYA5" target="_blank">
-                            Documentation </a> <br>
-                        <a href="https://github.com/shahriariqbal079/ZeroingArduinoCode-" target="_blank"> Arduino
-                            Source Code </a> <br>
+                        <!-- <a href=" https://drive.google.com/open?id=1NdUMphphGiX0L_eiPyHZtfcOCldTyYA5" target="_blank">
+                            Documentation </a> <br> -->
+                        <!-- <a href="https://github.com/shahriariqbal079/ZeroingArduinoCode-" target="_blank"> Arduino
+                            Source Code </a> <br> -->
                         <a href="https://drive.google.com/open?id=1af9vZWi4SrmB4L0EzjTIkjakR6zmG6i6" target="_blank">
                             Project Poster </a>
                     </p>
