--- a/index.html
+++ b/index.html
@@ -3436,7 +3436,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/nochinta/nochinta.png"
+                                                                <img src="assets/images/projects/nochinta/nochinta.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3473,7 +3473,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/covid/global.png"
+                                                                <img src="assets/images/projects/covid/global.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3502,7 +3502,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/smartbrain/smart front.png"
+                                                                <img src="assets/images/projects/smartbrain/smart front.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3534,7 +3534,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/ecommerce/e1.png"
+                                                                <img src="assets/images/projects/ecommerce/e1.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3583,7 +3583,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/nochinta/nochinta.png"
+                                                                <img src="assets/images/projects/nochinta/nochinta.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3616,7 +3616,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/designclub/designclub.png"
+                                                                <img src="assets/images/projects/designclub/designclub.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3650,7 +3650,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/smartbrain/smart front.png"
+                                                                <img src="assets/images/projects/smartbrain/smart front.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3682,7 +3682,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/ecommerce/e1.png"
+                                                                <img src="assets/images/projects/ecommerce/e1.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3736,7 +3736,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/dsa/1.HOME.png"
+                                                                <img src="assets/images/projects/dsa/1.home.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3771,7 +3771,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/brri/brri.png"
+                                                                <img src="assets/images/projects/brri/brri.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3804,7 +3804,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/driving-school/driving-school.png"
+                                                                <img src="assets/images/projects/driving-school/driving-school.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3868,7 +3868,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/applycafe/applycafe.png"
+                                                                <img src="assets/images/projects/applycafe/applycafe.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -3908,7 +3908,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/designclub/designclub.png"
+                                                                <img src="assets/images/projects/designclub/designclub.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -4049,7 +4049,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/forkify/front.png"
+                                                                <img src="assets/images/projects/forkify/front.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
@@ -4075,7 +4075,7 @@
                                                     <div class="inner">
                                                         <div class="thumbnail">
                                                             <a href="javascript:void(0)">
-                                                                <img src="assets/images/projects/pig/pig.png"
+                                                                <img src="assets/images/projects/pig/pig.jpg"
                                                                     alt="Personal Portfolio Images">
                                                             </a>
                                                         </div>
