--- a/index.html
+++ b/index.html
@@ -2587,123 +2587,7 @@
                                                 </div>
                                             </div>
 
-                                            <!-- Modal Portfolio Body area Start -->
-                                            <div class="modal fade" id="project-covid" tabindex="-1" role="dialog"
-                                                aria-hidden="true">
-                                                <div class="modal-dialog modal-dialog-centered" role="document">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <button type="button" class="close" data-dismiss="modal"
-                                                                aria-label="Close">
-                                                                <span aria-hidden="true"><i data-feather="x"></i></span>
-                                                            </button>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <div class="row ">
-
-                                                                <div class="col-lg-7">
-                                                                    <div id="carouselCovidControls"
-                                                                        class="carousel slide" data-ride="carousel">
-                                                                        <div class="carousel-inner ">
-                                                                            <div class="carousel-item inner active">
-                                                                                <img class="d-block w-100"
-                                                                                    style="height: 445px;"
-                                                                                    src="assets/images/projects/covid/bd.jpg"
-                                                                                    alt="First slide">
-                                                                            </div>
-                                                                            <div class="carousel-item">
-                                                                                <img class="d-block w-100"
-                                                                                    src="assets/images/projects/covid/global.jpg"
-                                                                                    style="height: 445px;"
-                                                                                    alt="Second slide">
-                                                                            </div>
-
-                                                                        </div>
-
-                                                                        <a class="carousel-control-prev"
-                                                                            href="#carouselCovidControls" role="button"
-                                                                            data-slide="prev">
-                                                                            <span class="" aria-hidden="true"> <i
-                                                                                    data-feather="chevron-left"></i>
-                                                                            </span>
-                                                                            <span class="sr-only">Previous</span>
-                                                                        </a>
-                                                                        <a class="carousel-control-next"
-                                                                            href="#carouselCovidControls" role="button"
-                                                                            data-slide="next">
-                                                                            <span class="" aria-hidden="true"> <i
-                                                                                    data-feather="chevron-right"></i>
-                                                                            </span>
-                                                                            <span class="sr-only">Next</span>
-                                                                        </a>
-                                                                    </div>
-                                                                </div>
-
-                                                                <div class="col-lg-5">
-                                                                    <div class="text-content">
-                                                                        <h3>
-                                                                            COVID-19 Tracker.
-                                                                        </h3>
-                                                                        <h6 class="project-tech-title title mt--20">
-                                                                            Technology Used</h6>
-                                                                        <!-- <p class="mb--30 w-100"> -->
-
-                                                                        <div class="button-group text-left m-0">
-                                                                            <a class="rn-btn border-button btn-small"
-                                                                                style="padding: 7px 20px; margin: 3px;"
-                                                                                href="#"> <img
-                                                                                    src="./assets/images/skills/react.png"
-                                                                                    style="height: 21px; margin-right: 4px;">
-                                                                                React</a>
-                                                                            <a class="rn-btn border-button btn-small"
-                                                                                style="padding: 7px 20px; margin: 3px;"
-                                                                                href="#"> <img
-                                                                                    src="./assets/images/skills/bootstrap.png"
-                                                                                    style="height: 21px; margin-right: 4px;">
-                                                                                Bootstrap</a>
-                                                                            <a class="rn-btn border-button btn-small"
-                                                                                style="padding: 7px 20px; margin: 3px;"
-                                                                                href="#"> <img
-                                                                                    src="./assets/images/skills/css.png"
-                                                                                    style="height: 21px; margin-right: 4px;">
-                                                                                CSS</a>
-                                                                            <a class="rn-btn border-button btn-small"
-                                                                                style="padding: 7px 20px; margin: 3px;"
-                                                                                href="#"> <img
-                                                                                    src="./assets/images/skills/html.png"
-                                                                                    style="height: 21px; margin-right: 4px;">
-                                                                                HTML</a>
-                                                                        </div>
-                                                                        <!-- </p> -->
-                                                                        <div class="button-group mt--20">
-
-                                                                            <a href="https://github.com/shahriariqbal/corona_tracker"
-                                                                                target="_blank" class="rn-btn">
-                                                                                <span>Github Link </span>
-                                                                                <i data-feather="chevron-right"></i>
-                                                                            </a>
-                                                                        </div>
-
-                                                                    </div>
-                                                                    <!-- End of .text-content -->
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="news-details">
-
-
-                                                                Coronavirus live statistics and COVID 19 tracking
-                                                                website built with React.js
-                                                                and API.
-
-
-                                                            </div>
-                                                            <!-- End of .row Body-->
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <!-- End Modal Portfolio area -->
+                                            
 
                                             <!-- Start Single Portfolio -->
                                             <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
@@ -4219,6 +4103,125 @@
             </div>
         </div>
         <!-- Back to top end -->
+
+        <!-- modal -->
+        <!-- Modal Portfolio Body area Start -->
+        <div class="modal fade" id="project-covid" tabindex="-1" role="dialog"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"
+                        aria-label="Close">
+                        <span aria-hidden="true"><i data-feather="x"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="row ">
+
+                        <div class="col-lg-7">
+                            <div id="carouselCovidControls"
+                                class="carousel slide" data-ride="carousel">
+                                <div class="carousel-inner ">
+                                    <div class="carousel-item inner active">
+                                        <img class="d-block w-100"
+                                            style="height: 445px;"
+                                            src="assets/images/projects/covid/bd.jpg"
+                                            alt="First slide">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100"
+                                            src="assets/images/projects/covid/global.jpg"
+                                            style="height: 445px;"
+                                            alt="Second slide">
+                                    </div>
+
+                                </div>
+
+                                <a class="carousel-control-prev"
+                                    href="#carouselCovidControls" role="button"
+                                    data-slide="prev">
+                                    <span class="" aria-hidden="true"> <i
+                                            data-feather="chevron-left"></i>
+                                    </span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next"
+                                    href="#carouselCovidControls" role="button"
+                                    data-slide="next">
+                                    <span class="" aria-hidden="true"> <i
+                                            data-feather="chevron-right"></i>
+                                    </span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-5">
+                            <div class="text-content">
+                                <h3>
+                                    COVID-19 Tracker.
+                                </h3>
+                                <h6 class="project-tech-title title mt--20">
+                                    Technology Used</h6>
+                                <!-- <p class="mb--30 w-100"> -->
+
+                                <div class="button-group text-left m-0">
+                                    <a class="rn-btn border-button btn-small"
+                                        style="padding: 7px 20px; margin: 3px;"
+                                        href="#"> <img
+                                            src="./assets/images/skills/react.png"
+                                            style="height: 21px; margin-right: 4px;">
+                                        React</a>
+                                    <a class="rn-btn border-button btn-small"
+                                        style="padding: 7px 20px; margin: 3px;"
+                                        href="#"> <img
+                                            src="./assets/images/skills/bootstrap.png"
+                                            style="height: 21px; margin-right: 4px;">
+                                        Bootstrap</a>
+                                    <a class="rn-btn border-button btn-small"
+                                        style="padding: 7px 20px; margin: 3px;"
+                                        href="#"> <img
+                                            src="./assets/images/skills/css.png"
+                                            style="height: 21px; margin-right: 4px;">
+                                        CSS</a>
+                                    <a class="rn-btn border-button btn-small"
+                                        style="padding: 7px 20px; margin: 3px;"
+                                        href="#"> <img
+                                            src="./assets/images/skills/html.png"
+                                            style="height: 21px; margin-right: 4px;">
+                                        HTML</a>
+                                </div>
+                                <!-- </p> -->
+                                <div class="button-group mt--20">
+
+                                    <a href="https://github.com/shahriariqbal/corona_tracker"
+                                        target="_blank" class="rn-btn">
+                                        <span>Github Link </span>
+                                        <i data-feather="chevron-right"></i>
+                                    </a>
+                                </div>
+
+                            </div>
+                            <!-- End of .text-content -->
+                        </div>
+                    </div>
+
+                    <div class="news-details">
+
+
+                        Coronavirus live statistics and COVID 19 tracking
+                        website built with React.js
+                        and API.
+
+
+                    </div>
+                    <!-- End of .row Body-->
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Modal Portfolio area -->
 
 
 
