--- a/index.html
+++ b/index.html
@@ -22,9 +22,151 @@
     <!-- my custom css -->
     <link rel="stylesheet" href="assets/css/custom.css">
 
+
+
+
+    <style>
+        #cursor {
+            position: fixed;
+            z-index: 99;
+            left: 0;
+            top: 0;
+            pointer-events: none;
+            will-change: transform;
+            mix-blend-mode: difference;
+        }
+
+        @media (hover: hover) and (pointer: fine) {
+            .cursor__circle {
+                width: 64px;
+                height: 64px;
+                margin-top: -50%;
+                margin-left: -50%;
+                border-radius: 50%;
+                border: solid 1px rgba(227, 222, 193, 0.64);
+                transition: opacity 0.3s cubic-bezier(0.25, 1, 0.5, 1),
+                    background-color 0.3s cubic-bezier(0.25, 1, 0.5, 1),
+                    border-color 0.3s cubic-bezier(0.25, 1, 0.5, 1),
+                    width 0.3s cubic-bezier(0.25, 1, 0.5, 1),
+                    height 0.3s cubic-bezier(0.25, 1, 0.5, 1);
+            }
+
+            #cursor.arrow .cursor__circle {
+                width: 128px;
+                height: 128px;
+                background-color: #073099;
+                border-color: #073099;
+            }
+
+            #cursor.arrow::after {
+                content: '';
+                position: absolute;
+                left: -50%;
+                top: -50%;
+                width: 100%;
+                height: 100%;
+                background-image: url('https://svgshare.com/i/MzQ.svg');
+                background-repeat: no-repeat;
+                background-position: center;
+            }
+
+            #cursor.subtle .cursor__circle {
+                opacity: 0.16;
+            }
+
+            #cursor.overlay .cursor__circle {
+                width: 48px;
+                height: 48px;
+                background-color: rgba(227, 222, 193, 0.08);
+                border-color: transparent;
+            }
+        }
+    </style>
+
 </head>
 
 <body class="template-color-1 spybody" data-spy="scroll" data-target=".navbar-example2" data-offset="150">
+
+    <div id="cursor">
+        <div class="cursor__circle"></div>
+    </div>
+
+
+    <script>
+        const cursor = document.querySelector('#cursor');
+        const cursorCircle = cursor.querySelector('.cursor__circle');
+
+        const mouse = { x: -100, y: -100 }; // mouse pointer's coordinates
+        const pos = { x: 0, y: 0 }; // cursor's coordinates
+        const speed = 0.1; // between 0 and 1
+
+        const updateCoordinates = e => {
+            mouse.x = e.clientX;
+            mouse.y = e.clientY;
+        }
+
+        window.addEventListener('mousemove', updateCoordinates);
+
+
+        function getAngle(diffX, diffY) {
+            return Math.atan2(diffY, diffX) * 180 / Math.PI;
+        }
+
+        function getSqueeze(diffX, diffY) {
+            const distance = Math.sqrt(
+                Math.pow(diffX, 2) + Math.pow(diffY, 2)
+            );
+            const maxSqueeze = 0.15;
+            const accelerator = 1500;
+            return Math.min(distance / accelerator, maxSqueeze);
+        }
+
+
+        const updateCursor = () => {
+            const diffX = Math.round(mouse.x - pos.x);
+            const diffY = Math.round(mouse.y - pos.y);
+
+            pos.x += diffX * speed;
+            pos.y += diffY * speed;
+
+            const angle = getAngle(diffX, diffY);
+            const squeeze = getSqueeze(diffX, diffY);
+
+            const scale = 'scale(' + (1 + squeeze) + ', ' + (1 - squeeze) + ')';
+            const rotate = 'rotate(' + angle + 'deg)';
+            const translate = 'translate3d(' + pos.x + 'px ,' + pos.y + 'px, 0)';
+
+            cursor.style.transform = translate;
+            cursorCircle.style.transform = rotate + scale;
+        };
+
+        function loop() {
+            updateCursor();
+            requestAnimationFrame(loop);
+        }
+
+        requestAnimationFrame(loop);
+
+
+
+        const cursorModifiers = document.querySelectorAll('[cursor-class]');
+
+        cursorModifiers.forEach(curosrModifier => {
+            curosrModifier.addEventListener('mouseenter', function () {
+                const className = this.getAttribute('cursor-class');
+                cursor.classList.add(className);
+            });
+
+            curosrModifier.addEventListener('mouseleave', function () {
+                const className = this.getAttribute('cursor-class');
+                cursor.classList.remove(className);
+            });
+        });
+    </script>
+
+
+
+
     <!-- Start Header -->
     <header class="rn-header haeder-default black-logo-version header--fixed header--sticky">
         <div class="header-wrapper rn-popup-mobile-menu m--0 row align-items-center">
@@ -144,10 +286,15 @@
 
 
     <!-- Start Main Page Wrapper -->
-    <main class="main-page-wrapper">
+    <main class="main-page-wrapper with-particles">
+        <div id="particles-js"></div>
+
+
 
         <!-- Start Slider Area -->
-        <div id="home" class="rn-slider-area">
+        <div id="home" class="rn-slider-area ">
+
+
             <div class="slide slider-style-2">
                 <div class="container">
                     <div class="row align-items-center row--30">
@@ -176,7 +323,7 @@
                                     </h1>
 
                                     <div>
-                                        <p class="description">
+                                        <p class="description" >
                                             Experienced Software Engineer with a passion for developing innovative
                                             programs. Skilled in conceptualizing, designing,
                                             developing, and deploying software containing logical and mathematical
@@ -786,6 +933,8 @@
 
         <!-- Start Client Area -->
         <div class="rn-client-area rn-section-gap section-separator" id="projects">
+
+
             <div class="container">
                 <div class="row">
 
@@ -3899,6 +4048,236 @@
     <script src="assets/js/vendor/particles.js"></script>
     <!-- main JS -->
     <script src="assets/js/main.js"></script>
+
+    <script>
+        particlesJS('particles-js',
+
+            // {
+            //     "particles": {
+            //         "number": {
+            //             "value": 80,
+            //             "density": {
+            //                 "enable": true,
+            //                 "value_area": 800
+            //             }
+            //         },
+            //         "color": {
+            //             "value": "#ffffff"
+            //         },
+            //         "shape": {
+            //             "type": "circle",
+            //             "stroke": {
+            //                 "width": 0,
+            //                 "color": "#000000"
+            //             },
+            //             "polygon": {
+            //                 "nb_sides": 5
+            //             },
+            //             "image": {
+            //                 "src": "img/github.svg",
+            //                 "width": 100,
+            //                 "height": 100
+            //             }
+            //         },
+            //         "opacity": {
+            //             "value": 0.6,
+            //             "random": false,
+            //             "anim": {
+            //                 "enable": false,
+            //                 "speed": 1,
+            //                 "opacity_min": 0.1,
+            //                 "sync": false
+            //             }
+            //         },
+            //         "size": {
+            //             "value": 5,
+            //             "random": true,
+            //             "anim": {
+            //                 "enable": false,
+            //                 "speed": 40,
+            //                 "size_min": 0.1,
+            //                 "sync": false
+            //             }
+            //         },
+            //         "line_linked": {
+            //             "enable": true,
+            //             "distance": 150,
+            //             "color": "#ffffff",
+            //             "opacity": 0.4,
+            //             "width": 1
+            //         },
+            //         "move": {
+            //             "enable": true,
+            //             "speed": 6,
+            //             "direction": "none",
+            //             "random": false,
+            //             "straight": false,
+            //             "out_mode": "out",
+            //             "bounce": false,
+            //             "attract": {
+            //                 "enable": false,
+            //                 "rotateX": 600,
+            //                 "rotateY": 1200
+            //             }
+            //         }
+            //     },
+            //     "interactivity": {
+            //         "detect_on": "canvas",
+            //         "events": {
+            //             "onhover": {
+            //                 "enable": true,
+            //                 "mode": "repulse"
+            //             },
+            //             "onclick": {
+            //                 "enable": true,
+            //                 "mode": "push"
+            //             },
+            //             "resize": true
+            //         },
+            //         "modes": {
+            //             "grab": {
+            //                 "distance": 300,
+            //                 "line_linked": {
+            //                     "opacity": 1
+            //                 }
+            //             },
+            //             "bubble": {
+            //                 "distance": 400,
+            //                 "size": 40,
+            //                 "duration": 2,
+            //                 "opacity": 8,
+            //                 "speed": 3
+            //             },
+            //             "repulse": {
+            //                 "distance": 100,
+            //                 "duration": 0.4
+            //             },
+            //             "push": {
+            //                 "particles_nb": 4
+            //             },
+            //             "remove": {
+            //                 "particles_nb": 2
+            //             }
+            //         }
+            //     },
+            //     "retina_detect": true
+            // }
+
+            {
+                "particles": {
+                    "number": {
+                        "value": 40,
+                        "density": {
+                            "enable": true,
+                            "value_area": 800
+                        }
+                    },
+                    "color": {
+                        "value": "#ffffff"
+                    },
+                    "shape": {
+                        "type": "circle",
+                        "stroke": {
+                            "width": 0,
+                            "color": "#000000"
+                        },
+                        "polygon": {
+                            "nb_sides": 5
+                        },
+                        "image": {
+                            "src": "img/github.svg",
+                            "width": 100,
+                            "height": 100
+                        }
+                    },
+                    "opacity": {
+                        "value": 0.5,
+                        "random": false,
+                        "anim": {
+                            "enable": false,
+                            "speed": 1,
+                            "opacity_min": 0.1,
+                            "sync": false
+                        }
+                    },
+                    "size": {
+                        "value": 3,
+                        "random": true,
+                        "anim": {
+                            "enable": false,
+                            "speed": 40,
+                            "size_min": 0.1,
+                            "sync": false
+                        }
+                    },
+                    "line_linked": {
+                        "enable": true,
+                        "distance": 150,
+                        "color": "#ffffff",
+                        "opacity": 0.4,
+                        "width": 1
+                    },
+                    "move": {
+                        "enable": true,
+                        "speed": 6,
+                        "direction": "none",
+                        "random": false,
+                        "straight": false,
+                        "out_mode": "out",
+                        "bounce": false,
+                        "attract": {
+                            "enable": false,
+                            "rotateX": 600,
+                            "rotateY": 1200
+                        }
+                    }
+                },
+                "interactivity": {
+                    "detect_on": "canvas",
+                    "events": {
+                        "onhover": {
+                            "enable": true,
+                            "mode": "repulse"
+                        },
+                        "onclick": {
+                            "enable": true,
+                            "mode": "push"
+                        },
+                        "resize": true
+                    },
+                    "modes": {
+                        "grab": {
+                            "distance": 400,
+                            "line_linked": {
+                                "opacity": 1
+                            }
+                        },
+                        "bubble": {
+                            "distance": 400,
+                            "size": 40,
+                            "duration": 2,
+                            "opacity": 8,
+                            "speed": 3
+                        },
+                        "repulse": {
+                            "distance": 200,
+                            "duration": 0.4
+                        },
+                        "push": {
+                            "particles_nb": 4
+                        },
+                        "remove": {
+                            "particles_nb": 2
+                        }
+                    }
+                },
+                "retina_detect": true
+            }
+
+        );
+    </script>
+
+
 </body>
 
 </html>
