updated header, experience & added cv

--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
                         <!-- Start Mainmanu Nav -->
                         <ul class="primary-menu nav nav-pills">
                             <li class="nav-item"><a class="nav-link smoth-animation active" href="#home">Home</a></li>
-                            <li class="nav-item"><a class="nav-link smoth-animation" href="#features">Features</a></li>
                             <li class="nav-item"><a class="nav-link smoth-animation" href="#experiences">Experiences</a>
                             </li>
                             <li class="nav-item"><a class="nav-link smoth-animation" href="#educations">Education</a>
@@ -144,7 +143,7 @@
                     </nav>
                     <!-- Start Header Right  -->
                     <div class="header-right">
-                        <a class="rn-btn" target="_blank" href="#"><span>Download CV</span></a>
+                        <a class="rn-btn" target="_blank" href="./assets/cv.pdf"><span>Download CV</span></a>
                         <div class="hamberger-menu d-block d-xl-none">
                             <i id="menuBtn" class="feather-menu humberger-menu"></i>
                         </div>
@@ -182,7 +181,6 @@
 
                 <ul class="primary-menu nav nav-pills">
                     <li class="nav-item"><a class="nav-link smoth-animation active" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link smoth-animation" href="#features">Features</a></li>
                     <li class="nav-item"><a class="nav-link smoth-animation" href="#experiences">Experiences</a>
                     </li>
                     <li class="nav-item"><a class="nav-link smoth-animation" href="#educations">Education</a>
@@ -368,7 +366,7 @@
                     <div class="col-lg-12">
                         <div class="section-title text-left" data-aos="fade-up" data-aos-duration="500"
                             data-aos-delay="100" data-aos-once="true">
-                            <span class="subtitle">Features</span>
+                            <!-- <span class="subtitle">Features</span> -->
                             <h2 class="title">What I Do</h2>
                         </div>
                     </div>
@@ -381,7 +379,8 @@
                         <div class="rn-service">
                             <div class="inner">
                                 <div class="icon">
-                                    <i data-feather="tv"></i>
+                                    <!-- <i data-feather="tv"></i> -->
+                                    <img src="./assets/images/whatido/frontend.png" alt="">
                                 </div>
                                 <div class="content">
                                     <h4 class="title"><a href="#">Frontend Development</a></h4>
@@ -400,7 +399,9 @@
                         <div class="rn-service">
                             <div class="inner">
                                 <div class="icon">
-                                    <i data-feather="twitch"></i>
+                                    <!-- <i data-feather="twitch"></i> -->
+                                    <img src="./assets/images/whatido/backend.png" alt="">
+
                                 </div>
                                 <div class="content">
                                     <h4 class="title"><a href="#">Backend Development</a></h4>
@@ -421,7 +422,9 @@
                         <div class="rn-service">
                             <div class="inner">
                                 <div class="icon">
-                                    <i data-feather="wifi"></i>
+                                    <!-- <i data-feather="wifi"></i> -->
+                                    <img src="./assets/images/whatido/devops.png" alt="">
+
                                 </div>
                                 <div class="content">
                                     <h4 class="title"><a href="#">DevOps</a></h4>
@@ -442,7 +445,9 @@
                         <div class="rn-service">
                             <div class="inner">
                                 <div class="icon">
-                                    <i data-feather="book-open"></i>
+                                    <!-- <i data-feather="book-open"></i> -->
+                                    <img src="./assets/images/whatido/app.png" alt="">
+
                                 </div>
                                 <div class="content">
                                     <h4 class="title"><a href="#">App Development</a></h4>
@@ -461,7 +466,9 @@
                         <div class="rn-service">
                             <div class="inner">
                                 <div class="icon">
-                                    <i data-feather="menu"></i>
+                                    <!-- <i data-feather="menu"></i> -->
+                                    <img src="./assets/images/whatido/business.png" alt="">
+
                                 </div>
                                 <div class="content">
                                     <h4 class="title"><a href="#">Business Stratagy</a></h4>
@@ -480,7 +487,9 @@
                         <div class="rn-service">
                             <div class="inner">
                                 <div class="icon">
-                                    <i data-feather="slack"></i>
+                                    <!-- <i data-feather="slack"></i> -->
+                                    <img src="./assets/images/whatido/freelancer.png" alt="">
+
                                 </div>
                                 <div class="content">
                                     <h4 class="title"><a href="#"> Freelancing</a></h4>
@@ -518,11 +527,48 @@
                         <!-- single skills -->
                         <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="100" data-aos-once="true"
                             class="experience-style-two">
-                            <div class="experience-left">
-                                <div class="experience-image">
+                            <div class="experience-left row">
+                                <div class="col-md-2">
                                     <img src="assets/images/portfolio/oict.png" alt="Personal Portfolio">
                                 </div>
-                                <div class="experience-center">
+                                <div class="experience-center col-md-10">
+                                    <span class="date">April 2021 - Present</span>
+                                    <h4 class="experience-title">
+                                        <a target="_blank" href="https://www.one-ict.com/"> One Information And
+                                            Communications Technology Limited </a>
+                                    </h4>
+                                    <h6 class="subtitle">
+                                        Software Engineer
+                                    </h6>
+
+                                    <ul>
+                                        <li class="disc">Collaborate with frontend and backend dev teams using Agile
+                                            Methodologies.
+                                            Closely work with the project manager
+                                            and the product owners.</li>
+                                        <li class="disc">Design, develop and maintenance Multi Vendor E-commerce
+                                            website, ERP and POS
+                                            system.</li>
+                                        <li class="disc">Design system architecture and working with both frontend
+                                            (React, Angular) and
+                                            backend (Node.js, Laravel).</li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
+                        <!-- single skills -->
+
+
+
+                        <!-- single skills -->
+                        <!-- <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="100" data-aos-once="true"
+                            class="experience-style-two">
+                            <div class="experience-left">
+                                <div class="experience-image ">
+                                    <img src="assets/images/portfolio/oict.png" alt="Personal Portfolio">
+                                </div>
+                                <div class="experience-center ">
                                     <span class="date">April 2021 - Present</span>
                                     <h4 class="experience-title">
                                         <a target="_blank" href="https://www.one-ict.com/"> One Information And
@@ -547,19 +593,23 @@
                                         backend (Node.js, Laravel).
                                     </p>
 
+                           
+
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- single skills -->
+
+
 
                         <!-- single skills -->
                         <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="100" data-aos-once="true"
                             class="experience-style-two">
-                            <div class="experience-left">
-                                <div class="experience-image">
+                            <div class="experience-left row">
+                                <div class="col-md-2">
                                     <img src="assets/images/portfolio/etl3.png" alt="Personal Portfolio">
                                 </div>
-                                <div class="experience-center">
+                                <div class="experience-center col-md-10">
                                     <span class="date">September 2020 - March 2021</span>
                                     <h4 class="experience-title">
                                         <a target="_blank" href="https://www.etl.com.bd/"> Ezze Technology Limited </a>
@@ -567,17 +617,19 @@
                                     <h6 class="subtitle">
                                         Full Stack Web Developer
                                     </h6>
-                                    <p class="disc "> <i data-feather="check"></i>
-                                        Worked with multiple government projects, participating in the whole process of
-                                        their development: product design
-                                        and estimation, code design and development, DevOps, product launch and
-                                        maintenance.
-                                    </p>
-                                    <p class="disc ">
-                                        <i data-feather="check"></i>
-                                        Engineered and maintained backend code with Laravel and database works using
-                                        MySQL.
-                                    </p>
+                                    <ul>
+                                        <li class="disc">
+                                            Worked with multiple government projects, participating in the whole process
+                                            of
+                                            their development: product design
+                                            and estimation, code design and development, DevOps, product launch and
+                                            maintenance.
+                                        </li>
+                                        <li class="disc">
+                                            Engineered and maintained backend code with Laravel and database works using
+                                            MySQL.
+                                        </li>
+                                    </ul>
 
                                 </div>
                             </div>
@@ -588,11 +640,11 @@
                         <!-- single skills -->
                         <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="100" data-aos-once="true"
                             class="experience-style-two">
-                            <div class="experience-left">
-                                <div class="experience-image">
+                            <div class="experience-left row">
+                                <div class="col-md-2">
                                     <img src="assets/images/portfolio/contessa2.png" alt="Personal Portfolio">
                                 </div>
-                                <div class="experience-center">
+                                <div class="experience-center col-md-10">
                                     <span class="date">November 2018 - March 2019</span>
                                     <h4 class="experience-title">
                                         <a target="_blank" href="https://www.contessabd.com/"> Contessa Solutions &
@@ -601,22 +653,23 @@
                                     <h6 class="subtitle">
                                         Internship Trainee
                                     </h6>
-                                    <p class="disc "> <i data-feather="check"></i>
-                                        Learned basic concepts of Network Vulnerability and Ethical Hacking
-                                    </p>
-                                    <p class="disc ">
-                                        <i data-feather="check"></i>
-                                        Learned Wireshark basic filtration and network vulnerability checking (used
-                                        NESSUS).
-                                    </p>
-                                    <p class="disc">
-                                        <i data-feather="check"></i>
-                                        Worked on computer forensics (used AUTOPSY).
-                                    </p>
-                                    <p class="disc">
-                                        <i data-feather="check"></i>
-                                        Got an in-depth knowledge of the Linux system.
-                                    </p>
+                                    <ul>
+                                        <li class="disc">
+                                            Learned basic concepts of Network Vulnerability and Ethical Hacking
+                                        </li>
+                                        <li class="disc">
+                                            Learned Wireshark basic filtration and network vulnerability checking (used
+                                            NESSUS).
+                                        </li>
+                                        <li class="disc">
+                                            Worked on computer forensics (used AUTOPSY).
+
+                                        </li>
+                                        <li class="disc">
+                                            Got an in-depth knowledge of the Linux system.
+
+                                        </li>
+                                    </ul>
 
                                 </div>
                             </div>
